# plasma-systemd

./: CMakeLists.txt
package/: metadata.json
package/contents/config/: config.qml
package/contents/ui/: main.qml
package/contents/ui/config/: Config.qml
plugin/: CMakeLists.txt  qmldir  systemdplugin.cpp  systemdplugin.h  systemdprocess.cpp  systemdprocess.h
